infrastructure/base/longhorn/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.longhorn.home.frandberg.live`)
      kind: Rule
      middlewares:
        - name: basic-auth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
    - match: Host(`longhorn.home.frandberg.live`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
#  tls:
#    secretName: ns-traefik-local-frandberg-live-staging-tls
